sumo/tests/netconvert/import/XML/errors/broken_edge/edge#shape__false4a/errors.netconvert
Error: Shape of a(n) edge is broken: not numeric position entry.
Quitting (on error).
